--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,20 +30,29 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="72dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="35dp"
                 android:text="@string/login"
                 android:textColor="@color/black"
                 android:textSize="44sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/inputEmail"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="72dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints" />
 
             <EditText
                 android:id="@+id/inputEmail"
                 android:layout_width="363dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="35dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="7dp"
                 android:autofillHints="Email"
                 android:background="@drawable/input_bg"
                 android:drawableStart="@drawable/baseline_email_24"
@@ -58,14 +67,18 @@
                 android:textColorHint="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="24dp"
-                tools:layout_editor_absoluteY="166dp" />
+                app:layout_constraintBottom_toTopOf="@+id/inputPassword"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                tools:ignore="MissingConstraints" />
 
             <EditText
                 android:id="@+id/inputPassword"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:layout_marginBottom="16dp"
                 android:autofillHints="Password"
                 android:background="@drawable/input_bg"
                 android:drawableStart="@drawable/baseline_security_24"
@@ -80,36 +93,42 @@
                 android:textColorHint="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/forgotPassword"
                 app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/inputEmail"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="230dp" />
+                app:layout_constraintTop_toBottomOf="@+id/inputEmail"
+                tools:ignore="MissingConstraints" />
 
             <TextView
                 android:id="@+id/forgotPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="235dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="23dp"
                 android:text="forgot_password"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                 app:layout_constraintEnd_toEndOf="@+id/inputPassword"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
 
             <Button
                 android:id="@+id/btnLogin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="23dp"
                 android:background="@drawable/input_bg"
                 android:text="login"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/inputPassword"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="352dp" />
+                app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
+                tools:ignore="MissingConstraints" />
 
             <TextView
                 android:id="@+id/createNewAccount"
@@ -128,14 +147,17 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="104dp"
+                android:layout_marginBottom="151dp"
                 android:text="@string/or"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                 app:layout_constraintStart_toStartOf="@+id/btnLogin"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="553dp" />
+                app:layout_constraintTop_toBottomOf="@+id/createNewAccount"
+                tools:ignore="MissingConstraints" />
 
             <View
                 android:id="@+id/view3"
