--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -55,15 +55,18 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="72dp"
+                android:layout_marginBottom="8dp"
                 android:text="Register"
                 android:textColor="@color/black"
                 android:textSize="44sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/inputEmail"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="72dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints" />
 
             <EditText
                 android:id="@+id/inputEmail"
@@ -92,6 +95,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/input_bg"
                 android:drawableLeft="@drawable/baseline_security_24"
                 android:ems="10"
@@ -105,6 +109,7 @@
                 android:textColorHint="@color/black"
                 android:textSize="24dp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/inputConfirmPassword"
                 app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/inputEmail"
@@ -115,14 +120,15 @@
                 android:id="@+id/btnRegister"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="34dp"
                 android:background="@drawable/input_bg"
                 android:text="Register"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/inputPassword"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="360dp" />
+                app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword"
+                tools:ignore="MissingConstraints" />
 
             <TextView
                 android:id="@+id/createNewAccount"
